updated usability of the footer, fixed list alignment of footer

--- a/webpage/css/footer.css
+++ b/webpage/css/footer.css
@@ -16,6 +16,7 @@ footer div {
 footer ul {
     display: flex;
     justify-content: space-around;
+    padding: unset;
 }
 
 footer li {
